<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/unikom"
                android:contentDescription="@string/todo"
                tools:ignore="ContentDescription" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView2"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_gravity="bottom"
                android:layout_margin="@dimen/margin"
                android:src="@drawable/photo" />
        </FrameLayout>
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:layout_margin="@dimen/margin"
            android:textColor="@android:color/black"
            android:text="@string/nama_mhs"/>
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_margin="@dimen/margin"
            android:text="@string/judul" />
        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judul_skripsi"
            android:layout_margin="@dimen/margin"
            android:lineSpacingMultiplier="1"
            android:textSize="14sp"
            android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data"
            android:textSize="12sp"
            android:layout_margin="@dimen/margin"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin">
                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin"
                    android:textSize="14sp"
                    android:text="@string/nim"/>
                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/nim_nim"
                    android:textColor="@android:color/black"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin">
                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin"
                    android:textSize="14sp"
                    android:text="@string/kelas"/>
                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/kelas_kelas"
                    android:textColor="@android:color/black"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin">
                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin"
                    android:textSize="14sp"
                    android:text="@string/prodi"/>
                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/prodi_prodi"
                    android:textColor="@android:color/black"/>
            </TableRow>

        </TableLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dosen_pembimbing"
            android:textSize="12sp"
            android:layout_marginLeft="@dimen/margin"

            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="8dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView3"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:layout_marginBottom="@dimen/margin"
                android:src="@drawable/Dosen"
                tools:ignore="ImageContrastCheck" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/imageView3"
                android:text="@string/budi_raharjo_m_kom"
                android:textColor="@android:color/black"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ubah_data"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:onClick="showToast"
            tools:ignore="UsingOnClickInXml,VisualLintButtonSize" />
    </LinearLayout>
</ScrollView>
